Suggested cleanup from analysis